--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,10 @@ allprojects {
 
         google()
         jcenter()
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+        
         maven { url 'https://www.jitpack.io' }
     }
 }
