--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-phone-input": "^1.0.10",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
