--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.3.7",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
+    "react-native-image-modal": "^2.0.3",
     "react-native-phone-input": "^1.0.10",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
