--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,12 +149,18 @@ android {
         }
     }
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-        }
+        // debug {
+        //     storeFile file('debug.keystore')
+        //     storePassword 'android'
+        //     keyAlias 'androiddebugkey'
+        //     keyPassword 'android'
+        // }
+         release {
+      storeFile file('your_key_name.keystore')
+      storePassword 'artistic123'
+      keyAlias 'your_key_alias'
+      keyPassword 'artistic123'
+    }
     }
     buildTypes {
         debug {
