--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-dropdown-picker": "^5.1.23",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.7",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-image-modal": "^2.0.3",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-phone-input": "^1.0.10",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
