--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-phone-input": "^1.0.10",
     "react-native-reanimated": "^2.2.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-splash-screen": "^3.2.0",
